# ImageHeaderResolver

./: .gitignore  LICENSE  README.md
ImageHeaderResolver/: CMakeLists.txt  ImageHeader.cpp  ImageHeaderResolver.c  ImageHeaderResolver.h  Image_Header.cpp  Image_Header.hpp  TiffFunctionTemplate.h  image.rar  test.cpp
